$Revision$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-09-27 [C] Fixed error message if uploaded file exceeds dimension limit (thread ID 67282) {eenemeenemuu}
2010-09-26 [M] Removed support for GD1 (thread ID 66761) {Nibbler}
2010-09-26 [O] No longer specify a MySQL engine - use the server default. {Nibbler}
2010-09-20 [O] Updated jquery libraries 'elastic', 'datePicker', 'spinbox' {GauGau}
2010-09-20 [O] Updated embedded jquery library from version 1.3.2 to 1.4.2 {GauGau}
2010-09-16 [B] Fixed registration process if both email verification and admin activation enabled (thread ID 67095) {eenemeenemuu}
2010-09-13 [M] Increased version count from cpg1.5.9 to cpg1.6.01 {GauGau}
2010-09-12 [B] Fixed display of unprocessed bbcode markup in ecard display {Nibbler}
2010-09-10 [O] Optimized picture resizing and watermarking procedure {eenemeenemuu}
2010-09-10 [B] Fixed exif issue when auto resizing is enabled and watermarking is disabled (thread ID 66994) {eenemeenemuu}
2010-09-10 [A] Show 'upload needs admin approval' message for flash uploader (thread ID 66832) {eenemeenemuu}
2010-09-10 [B] Fixed setting email sender address {Nibbler}
2010-09-03 [B] Updated regex to fix error message for blank 'allowed file types' values (thread ID 66289) {eenemeenemuu}
2010-09-03 [B] Fixed missing classid attribute causing videos not to play (thread ID 66477 & 66393) {eenemeenemuu}
2010-09-03 [B] Fixed issue when regular users try to upload to self-created public albums with simple upload form (thread ID 66903) {eenemeenemuu}
2010-09-02 [B] Allow admin to change email address (thread ID 66881) {eenemeenemuu}